@@ -1,3 +1,6 @@
+[B]1.4.5[/B]
+- Fixed: dvdorder setting won't apply in GetEpisodeDetails (thx and credits to scudlee)
+
 [B]1.4.4[/B]
 - Updated: language files from Transifex
 
